新增用户列表接口,优化swagger文档模型字段deleted_at不兼容问题
