# app/controller/v1/user.go
@@ -1,6 +1,8 @@
 package v1
 
 import (
+	"gin/app/request"
+	"gin/app/service"
 	"gin/common/base"
 	"gin/common/errcode"
 	"github.com/gin-gonic/gin"
@@ -11,7 +13,40 @@ type UserController struct {
 }
 
 // List 列表
-// @Router /user [get]
+// @Tags 用户管理
+// @Summary 列表
+// @Description 用户列表
+// @Param token header string true "认证Token"
+// @Param page query string true "页码"
+// @Param pageSize query string true "分页大小"
+// @Success 200 {object} errcode.SuccessResponse{data=request.PageData{list=[]model.User}} "登录成功"
+// @Failure 400 {object} errcode.ArgsErrorResponse "参数错误"
+// @Failure 500 {object} errcode.SystemErrorResponse "系统错误"
+// @Router /api/v1/user [get]
 func (s *UserController) List(c *gin.Context) {
-	s.Success(c, nil, errcode.Success())
+	var (
+		svc service.UserService
+		req request.User
+	)
+
+	err := c.ShouldBind(&req)
+	if err != nil {
+		s.Error(c, errcode.SystemError().WithMsg(err.Error()))
+		return
+	}
+
+	// 验证
+	err = request.User{}.GetValidate(req, "list")
+	if err != nil {
+		s.Error(c, errcode.ArgsError().WithMsg(err.Error()))
+		return
+	}
+
+	res, err := svc.List(req)
+	if err != nil {
+		s.Error(c, errcode.SystemError().WithMsg(err.Error()))
+		return
+	}
+
+	s.Success(c, res, errcode.Success())
 }
