# app/request/user.go
@@ -25,7 +25,7 @@ func (s User) GetValidate(data User, scene string) error {
 // - 也可以添加验证设置
 func (s User) ConfigValidation(v *validate.Validation) {
 	v.WithScenes(validate.SValues{
-		"list":   []string{"Page", "PageSize"},
+		"list":   []string{"PageListValidate.Page", "PageListValidate.PageSize"},
 		"create": []string{},
 		"update": []string{"ID"},
 		"detail": []string{"ID"},
